@@ -105,6 +105,9 @@ C-API
 Library
 -------
 
+- Issue #6656: fix locale.format_string to handle escaped percents
+  and mappings.
+
 - Issue #1100562: Fix deep-copying of objects derived from the list and
   dict types.  Patch by Michele Orrù and Björn Lindqvist.
 
